Changes to the project